k8s/backend_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: asia-east1-docker.pkg.dev/GOOGLE_CLOUD_PROJECT/my-backend-repository/benclass:COMMIT_SHA
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: secret-volume
              mountPath: /app/config.json
              subPath: config.json
      volumes:
        - name: secret-volume
          secret:
            secretName: backend-secret
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "benclass-backend"
  labels:
    app: backend
spec:
  defaultBackend:
    service:
      name: backend-service
      port:
        number: 8000
